# aleng

./: .gitignore  CMakeLists.txt  README.md
aleng-ide/: .gitignore  index.html  package.json
aleng-ide/public/: AlengWasm.js  AlengWasm.wasm
aleng-ide/src/: App.tsx  index.css
aleng-ide/src/components/: CodeEditor.tsx
aleng-ide/src/store/: useAlengEngine.ts  useFileStore.ts
editors/code/: language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/code/src/: extension.ts
scripts/: build-wasm.sh  generate_stdlib.py
src/: main.cpp
src/Apps/CLI/: main.cpp
src/Apps/LSP/: Analyzer.cpp  Analyzer.h  LSPTransport.cpp  LSPTransport.h  main.cpp
src/Apps/Wasm/: Bindings.cpp
src/Core/: AST.cpp  AST.h  ControlFlow.h  Error.cpp  Error.h  Lexer.cpp  Lexer.h  ModuleManager.cpp  ModuleManager.h  NativeRegistry.cpp  Parser.cpp  Parser.h  SourceRange.h  Tokens.h  Visitor.cpp  Visitor.h
src/Core/Modules/: NativeModule.h  StdMath.cpp  StdTest.cpp
src/Modules/: NativeModule.h  StdMath.cpp
src/Window/: Window.cpp  Window.h
stdlib/: logger.aleng
tests/: advanced_control_flow.aleng  advanced_functions_data.aleng  core.aleng  main.aleng
web/: index.html
